Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,9 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
-
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+/api/.bundle
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
-/tmp
+/api/log/*.log
+/api/tmp
+
